mixture mixing implementation